# pyrolusite

./: .gitattributes  Cargo.toml  readme.md  tmpl.html
docs/: home.css  index.html  mode.css  post.css  post.html  tauri-updater.html  test.html  ure-internship.html  vars.css
example/: post.md  tauri-updater.md  test.md
example/public/: home.css  post.css  vars.css
exp/: home.css  index.html
md/: test.md  ure-internship.md
src/: args.rs  builder.rs  doc.rs  head.rs  main.rs  render.rs
src/blog/: home.rs  mod.rs  walk.rs
src/post/: body.rs  head.rs  mod.rs  syntect.rs
src/syntect/: mod.rs
src/tmpl/: home.html  post.html
static/: home.html  post.html  tmpl.html
styles/: home.css  mode.css  post.css  tmpl.css
