[package]
name = "pyrolusite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23" # Datetime for posts
regex = "1.7.1"   # Markdown header parsing

# Template engine
tera = { version = "1.18.0", default-features = false }
serde = "1.0.155"

# Markdown parser
comrak = "0.16"
syntect = "5.0"

lazy_static = "1.4.0" # Used together with `regex`