[package]
name = "pyrolusite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23" # Datetime for posts
regex = "1.7.1"   # Markdown header parsing

minify-html = "0.10.8" # Minify html files
css-minify = "0.3.1"   # Minify css files

# Template engine
tera = { version = "1.18.0", default-features = false, features = ["builtins"] }
serde = "1.0.155"

# Markdown parser
comrak = "0.16"
syntect = "5.0"

once_cell = "1.16" # Used for lazy static variables

# CLI arguments parser
clap = { version = "4.2.1", features = ["derive"] }
